# api/gen/docs/openapi.yaml
@@ -188,34 +188,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /identity/user/authenticate:
-        post:
-            tags:
-                - UserService
-            description: |-
-                Authenticate authenticates a user.
-                 @Param AuthenticateRequest
-                 @Return AuthenticateResponse
-            operationId: UserService_Authenticate
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/AuthenticateRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/AuthenticateResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
     /identity/user/create:
         post:
             tags:
@@ -238,6 +210,34 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/CreateUserResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /identity/user/login:
+        post:
+            tags:
+                - UserService
+            description: |-
+                Login logs in a user.
+                 @Param LoginRequest
+                 @Return LoginResponse
+            operationId: UserService_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/LoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/LoginResponse'
                 default:
                     description: Default error response
                     content:
@@ -364,22 +364,6 @@ components:
                     $ref: '#/components/schemas/User'
                 baseResp:
                     $ref: '#/components/schemas/BaseResp'
-        AuthenticateRequest:
-            type: object
-            properties:
-                account:
-                    type: string
-                password:
-                    type: string
-                base:
-                    $ref: '#/components/schemas/Base'
-        AuthenticateResponse:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/User'
-                baseResp:
-                    $ref: '#/components/schemas/BaseResp'
         Base:
             type: object
             properties: {}
@@ -465,6 +449,22 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        LoginRequest:
+            type: object
+            properties:
+                account:
+                    type: string
+                password:
+                    type: string
+                base:
+                    $ref: '#/components/schemas/Base'
+        LoginResponse:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/User'
+                baseResp:
+                    $ref: '#/components/schemas/BaseResp'
         Role:
             type: object
             properties:
