# internal/application/identity.go
@@ -9,11 +9,13 @@ import (
 	"github.com/dizzrt/dauth/internal/domain/identity/entity"
 	"github.com/dizzrt/dauth/internal/infra/rpc"
 	"github.com/dizzrt/dauth/internal/infra/utils"
+	"github.com/dizzrt/ellie/log"
 )
 
 var _ IdentityApplication = (*identityApplication)(nil)
 
 type IdentityApplication interface {
+	Login(context.Context, *identity.LoginRequest) (*identity.LoginResponse, error)
 	Authenticate(context.Context, *identity.AuthenticateRequest) (*identity.AuthenticateResponse, error)
 	CreateUser(context.Context, *identity.CreateUserRequest) (*identity.CreateUserResponse, error)
 	GetUser(context.Context, *identity.GetUserRequest) (*identity.GetUserResponse, error)
@@ -24,6 +26,38 @@ type IdentityApplication interface {
 type identityApplication struct {
 	userBiz biz.UserBiz
 	roleBiz biz.RoleBiz
+}
+
+func (app *identityApplication) Login(ctx context.Context, req *identity.LoginRequest) (*identity.LoginResponse, error) {
+	var account string // only support email yet
+	if account = req.GetAccount(); account == "" {
+		return nil, identity.ErrorInvalidEmail("email can not be empty")
+	}
+
+	if err := utils.Validate().Var(account, "email"); err != nil {
+		return nil, identity.ErrorInvalidEmail("malformed email").WithCause(err)
+	}
+
+	var pwd string
+	if pwd = req.GetPassword(); pwd == "" {
+		return nil, identity.ErrorInvalidPassword("password can not be empty")
+	}
+
+	// authenticate user
+	user, err := app.userBiz.Authenticate(ctx, account, pwd)
+	if err != nil {
+		return nil, err
+	}
+
+	// update last login time
+	if err := app.userBiz.UpdateLastLoginTime(ctx, user.ID); err != nil {
+		log.CtxErrorf(ctx, "user `%d` has logged in successfully, but failed to update the last login time; err: %v", user.ID, err)
+	}
+
+	return &identity.LoginResponse{
+		User:     convert.UserToIdentityUser(user),
+		BaseResp: rpc.Success(),
+	}, nil
 }
 
 func NewIdentityApplication(userBiz biz.UserBiz, roleBiz biz.RoleBiz) IdentityApplication {
@@ -53,9 +87,8 @@ func (app *identityApplication) Authenticate(ctx context.Context, req *identity.
 		return nil, err
 	}
 
-	// TODO get roles
 	return &identity.AuthenticateResponse{
-		User:     convert.UserToIdentityUser(user, nil),
+		User:     convert.UserToIdentityUser(user),
 		BaseResp: rpc.Success(),
 	}, nil
 }
@@ -91,9 +124,8 @@ func (app *identityApplication) GetUser(ctx context.Context, req *identity.GetUs
 		return nil, err
 	}
 
-	// TODO get roles
 	return &identity.GetUserResponse{
-		User:     convert.UserToIdentityUser(user, nil),
+		User:     convert.UserToIdentityUser(user),
 		BaseResp: rpc.Success(),
 	}, nil
 }
